--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -1,14 +1,127 @@
-#journal-scroll::-webkit-scrollbar {
-  width: 6px;
-  cursor: pointer;
+
+.Chat {
+  text-align: center;
+  max-width: full;
+  margin: 0 auto;
+	position: relative;
 }
 
-#journal-scroll::-webkit-scrollbar-track {
-  background-color: rgba(229, 231, 235, var(--bg-opacity));
-  cursor: pointer;
+.Chat section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 50vh;
+  background-color: rgb(40, 37, 53);
 }
 
-#journal-scroll::-webkit-scrollbar-thumb {
-  cursor: pointer;
-  background-color: #a0aec0;
+main {
+  padding: 10px;
+  height: 34vh;
+  margin: 10vh 0 10vh;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 }
+
+main::-webkit-scrollbar {
+  width: 0.25rem;
+}
+
+main::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
+
+main::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
+
+
+.msg-form {
+	position: absolute;
+  height: 7vh;
+  bottom: 0;
+	margin-bottom: 2vh;
+  background-color: rgb(24, 23, 23);
+  width: 100%;
+  max-width: 100%;
+  display: flex;
+  font-size: 1.5rem;
+}
+
+.msg-form button {
+  width: 20%;
+  background-color: rgb(56, 56, 143);
+}
+
+
+.msg-input {
+  line-height: 1.5;
+  width: 100%;
+  font-size: 1.5rem;
+  background: rgb(58, 58, 58);
+  color: white;
+  outline: none;
+  border: none;
+  padding: 0 10px;
+}
+
+send-btn {
+  background-color: #282c34; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 1.25rem;
+}
+
+send-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.message {
+  display: flex;
+  align-items: center;
+	margin: 0 10px;
+	
+}
+
+.msg-p {
+  max-width: 500px;
+  margin-bottom: 12px;
+  line-height: 24px;
+  padding: 10px 20px;
+  border-radius: 25px;
+  position: relative;
+  color: white;
+  text-align: center;
+}
+
+
+
+.sent {
+  flex-direction: row-reverse;
+}
+
+.sent p {
+  color: white;
+  background: #0b93f6;
+  align-self: flex-end;
+}
+.received p {
+  background: #e5e5ea;
+  color: black;
+	margin-left: 5px
+}
+
+.user-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 2px 5px;
+	margin-bottom: 15px;
+}
+
