--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -104,12 +104,14 @@ send-btn:disabled {
 
 .sent {
   flex-direction: row-reverse;
+	
 }
 
 .sent p {
   color: white;
   background: #0b93f6;
   align-self: flex-end;
+	margin-right: 5px;
 }
 .received p {
   background: #e5e5ea;
